--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node bin/mall-node"
   },
   "dependencies": {
+    "apidoc": "^0.17.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -13,5 +14,11 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1"
+  },
+  "apidoc": {
+    "title": "mall-admin-api",
+    "description": "商城后台管理接口文档",
+    "version": "1.0.0",
+    "url" : "http://127.0.0.1:3000"
   }
 }
