--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1"
   },
@@ -19,6 +20,6 @@
     "title": "mall-admin-api",
     "description": "商城后台管理接口文档",
     "version": "1.0.0",
-    "url" : "http://127.0.0.1:3000"
+    "url": "http://127.0.0.1:3000"
   }
 }
