修改代码、调整

--- a/package.json
+++ b/package.json
@@ -39,6 +39,16 @@
     "title": "mall-admin-api",
     "description": "商城后台管理接口文档",
     "version": "1.0.0",
-    "url": "http://127.0.0.1:3000"
+    "url": "http://127.0.0.1:3000",
+    "header": {
+      "title": ""
+    },
+    "footer": {
+      "title": ""
+    },
+    "order": [
+      "post",
+      "get"
+    ]
   }
 }
